# etoml-rs

./: Cargo.toml  README.md
src/: etoml.pest  lib.rs  parser.rs
src/test_resources/: basic_components.etoml  basic_properties.cfg  basic_properties.etoml  object_array.etoml  object_with_comma.etoml  test.cfg  test_component.etoml  test_component_concat.etoml  test_component_with_global.cfg  test_concat.etoml  test_derive.cfg  test_derive.etoml  test_direct_object.etoml  test_env_var.etoml  test_global_object_in_array.etoml  test_global_render.cfg  test_import.etoml  test_invalid_syntax.etoml  test_map.etoml  test_no_semicolon.cfg  test_one_line.cfg  test_raw_string.etoml  test_string_concat.etoml  whitespace.etoml
