[package]
name = "etoml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
syn = "1.0.48"
quote = "1.0.7"

[dev-dependencies]
etoml-derive = {git = "https://github.com/UbiqueInnovation/etoml-derive.git", rev = "2d8a5f3"}
