[package]
name = "etoml"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
pest = "2"
pest_derive = "2"
syn = "2"
quote = "1"

[dev-dependencies]
etoml-derive = {git = "https://github.com/UbiqueInnovation/etoml-derive.git", rev = "9aefa8d761472763831636a7dba501fc45846c70"}
